fix: handle possible NPE on empty set
(cherry picked from commit a50a75a5f01189e2b596760f6dcbd584fc19c800)